Fix incorrect button text color on iOS Safari

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -115,6 +115,7 @@ $blue-button-color: #096efb;
     align-items: center;
     background-color: $grey-button-color;
     border-radius: 12px;
+    color: #000;
     display: flex;
     gap: 4px;
     justify-content: center;
