--- a/src/styles/Collapsible.scss
+++ b/src/styles/Collapsible.scss
@@ -8,6 +8,7 @@
     align-items: center;
     background-color: initial;
     border: 0;
+    color: #000;
     display: flex;
     justify-content: space-between;
     padding: 16px;
